tests/elab_fail/macroError.lean.out.expected
macroError.lean:3:7-3:10: error: Test Error
