tests/elab_fail/macroError.lean
macro "foo" : term => Lean.Macro.throwError "Test Error"

#check foo
